Some small tweaks for schema package
