# core/schema/repository.go
@@ -1,16 +1,9 @@
 package schema
 
-type InsertOneFieldParams struct {
-	Name      string
-	Primitive int
-	Data      interface{}
-}
-
 type InsertOneParams struct {
 	RealmID  string
 	AuthorID string
 	Name     string
-	Fields   []*InsertOneFieldParams
 }
 
 type Repository interface {
