# core/schema/service.go
@@ -1,16 +1,9 @@
 package schema
 
-type CreateFieldParams struct {
-	Name      string
-	Primitive int
-	Data      interface{}
-}
-
 type CreateParams struct {
 	RealmID  string
 	AuthorID string
 	Name     string
-	Fields   []*CreateFieldParams
 }
 
 type Service interface {
