# core/schema/service/create.go
@@ -6,16 +6,7 @@ import (
 )
 
 func (s *service) Create(params schema.CreateParams) (*schema.Entity, error) {
-	var fields []*schema.InsertOneFieldParams
-	for _, f := range params.Fields {
-		fields = append(fields, &schema.InsertOneFieldParams{Name: f.Name, Primitive: f.Primitive, Data: f.Data})
-	}
-	result, err := s.repository.InsertOne(schema.InsertOneParams{
-		RealmID:  params.RealmID,
-		AuthorID: params.AuthorID,
-		Name:     params.Name,
-		Fields:   fields,
-	})
+	result, err := s.repository.InsertOne(schema.InsertOneParams(params))
 	if err != nil {
 		return nil, fmt.Errorf("%v", err)
 	}
