# docs/swagger.json
@@ -223,7 +223,7 @@
                         "in": "path"
                     },
                     {
-                        "description": "Realm parameters",
+                        "description": "Schema parameters",
                         "name": "body",
                         "in": "body",
                         "schema": {
@@ -233,7 +233,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.Entity"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -289,7 +292,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/field.Entity"
+                                "$ref": "#/definitions/press_core_field.Entity"
                             }
                         }
                     },
@@ -343,7 +346,7 @@
                         "name": "body",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/press_core_field_http.CreateFieldRequest"
+                            "$ref": "#/definitions/CreateFieldRequest"
                         }
                     }
                 ],
@@ -351,7 +354,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/field.Entity"
+                            "$ref": "#/definitions/press_core_field.Entity"
                         }
                     },
                     "400": {
@@ -412,15 +415,27 @@
         }
     },
     "definitions": {
+        "CreateFieldRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "primitive"
+            ],
+            "properties": {
+                "data": {
+                    "type": "object"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "primitive": {
+                    "type": "string"
+                }
+            }
+        },
         "CreateSchemaRequest": {
             "type": "object",
             "properties": {
-                "fields": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/press_core_schema_http.CreateFieldRequest"
-                    }
-                },
                 "name": {
                     "type": "string"
                 }
@@ -491,7 +506,18 @@
                 }
             }
         },
-        "field.Entity": {
+        "http.createRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "press_core_field.Entity": {
             "type": "object",
             "properties": {
                 "data": {
@@ -511,50 +537,20 @@
                 }
             }
         },
-        "http.createRequest": {
+        "press_core_schema_field.Entity": {
             "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "press_core_field_http.CreateFieldRequest": {
-            "type": "object",
-            "required": [
-                "name",
-                "primitive"
-            ],
             "properties": {
                 "data": {
                     "type": "object"
+                },
+                "id": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
                 "primitive": {
                     "type": "string"
-                }
-            }
-        },
-        "press_core_schema_http.CreateFieldRequest": {
-            "type": "object",
-            "required": [
-                "name",
-                "primitive"
-            ],
-            "properties": {
-                "data": {
-                    "type": "object"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "primitive": {
-                    "type": "integer"
                 }
             }
         },
@@ -569,6 +565,26 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.Entity": {
+            "type": "object",
+            "properties": {
+                "fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/press_core_schema_field.Entity"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "realmId": {
                     "type": "string"
                 }
             }
